유성우 함수 완성

--- a/meteor-shower/OverTheMoon_유성우.ipynb
+++ b/meteor-shower/OverTheMoon_유성우.ipynb
@@ -2798,7 +2798,6 @@
     "# 도시명을 입력히면 위도와 별자리리스트와 메시지를 반환하는 함수\n",
     "\n",
     "def predict_best_meteor_shower_viewing(city):\n",
-    "    \n",
     "    latitude = latitude_of(city)\n",
     "    \n",
     "    indices = (constellations['latitudestart'] >= latitude) & (latitude >= constellations['latitudeend'])\n",
@@ -3086,7 +3085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -3153,13 +3152,13 @@
        "113 2020-04-23         0.0"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "moon_phase_list = moon_phases.loc[(moon_phases['date'] >= meteor_showers_startdate) & (moon_phases['date'] <= meteor_showers_enddate)]\n",
+    "moon_phase_list = moon_phases[(moon_phases['date'] >= meteor_showers_startdate) & (moon_phases['date'] <= meteor_showers_enddate)]\n",
     "moon_phase_list.head()"
    ]
   },
@@ -3214,7 +3213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3222,54 +3221,62 @@
     "\n",
     "def predict_best_meteor_shower_viewing(city):\n",
     "    # 안내 메시지 초기화\n",
-    "    meteor_shower_string = ''\n",
+    "    messages = []\n",
     "\n",
-    "    # 입력한 도시 정보가 존재하지 않으면 오류 메시지\n",
-    "    \n",
-    "    \n",
     "    # 도시의 위도 정보를 불러오기\n",
+    "    latitude = latitude_of(city)\n",
     "    \n",
+    "    # 입력한 도시 정보가 존재하지 않으면 오류 메시지\n",
+    "    if latitude is None:\n",
+    "        return f'도시 정보를 찾을 수 없습니다.\\n\\t도시: {city}'\n",
     "\n",
     "    # 해당 도시의 위도에서 관측 가능한 별자리 조회\n",
-    "\n",
+    "    indices = (constellations['latitudestart'] >= latitude) & (latitude >= constellations['latitudeend'])\n",
+    "    visible_constellations = constellations[indices]['constellation'].tolist()\n",
     "\n",
     "    # 볼 수 있는 별자리가 존재하지 않으면 오류 메시지\n",
-    "    \n",
+    "    if not visible_constellations:\n",
+    "        return f'관측 가능한 별자리가 없습니다.\\n\\t도시: {city}'\n",
     "    \n",
     "    # 별자리 관측 가능 안내 메시지\n",
-    "    \n",
+    "    messages.append(f'관측 가능한 별자리를 찾았습니다.\\n\\t도시:\\t{city}\\n\\t별자리:\\t{', '.join(visible_constellations)}')\n",
+    "    messages.append('-'*80)\n",
     "    \n",
     "    # 도시별 관찰 가능한 별자리 iterate\n",
-    "    for constellation in constellations_list:\n",
+    "    for constellation in visible_constellations:\n",
     "        # 별자리와 가장 가까운 유성우 조회\n",
-    "        \n",
+    "        meteor_shower = meteor_showers[meteor_showers['radiant'] == constellation].iloc[0]\n",
     "\n",
     "        # 유성우 관측이 가능한 시작일과 종료일\n",
+    "        startdate = meteor_shower['startdate']\n",
+    "        enddate = meteor_shower['enddate']\n",
     "        \n",
-    "\n",
     "        # 유성우가 보일 때의 달의 위상 조회\n",
-    "        \n",
+    "        moon_phase = moon_phases[(moon_phases['date'] >= startdate) & (moon_phases['date'] <= enddate)]\n",
     "\n",
-    "        # 달이 눈에 보이는 첫 날 조회\n",
+    "        # 달이 가장 어두운 첫 날 조회\n",
+    "        darkest_day = moon_phase.loc[moon_phase['percentage'].idxmin()]['date']\n",
+    "        darkest_day = str(darkest_day).split()[0]\n",
     "        \n",
-    "\n",
     "        # 사용자에게 정보전달\n",
-    "         \n",
+    "        messages.append(\n",
+    "            f'별자리: {constellation:10} -> 유성우: {meteor_shower['name']:18} (최적:{darkest_day})'\n",
+    "        )\n",
     "\n",
-    "\n",
-    "    return meteor_shower_string"
+    "    return '\\n'.join(messages)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "아쉽지만 New York에서는 현재 유성우 예측이 어렵습니다.\n"
+      "도시 정보를 찾을 수 없습니다.\n",
+      "\t도시: New York\n"
      ]
     }
    ],
@@ -3279,18 +3286,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wellington에서는 별자리 관측이 가능합니다: \n",
-      "\n",
-      "Eta Aquarids를 잘 보려면 Aquarius자리 위치를 향하여 April 22, 2020보면 됩니다.\n",
-      "Orionids를 잘 보려면 Orion자리 위치를 향하여 October 16, 2020보면 됩니다.\n",
-      "\n"
+      "관측 가능한 별자리를 찾았습니다.\n",
+      "\t도시:\tWellington\n",
+      "\t별자리:\tAquarius, Orion\n",
+      "--------------------------------------------------------------------------------\n",
+      "별자리: Aquarius   -> 유성우: Eta Aquarids (최적:2020-04-22)\n",
+      "별자리: Orion      -> 유성우: Orionids     (최적:2020-10-16)\n"
      ]
     }
    ],
@@ -3300,20 +3308,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Seoul에서는 별자리 관측이 가능합니다: \n",
-      "\n",
-      "Lyrids를 잘 보려면 Lyra자리 위치를 향하여 April 22, 2020보면 됩니다.\n",
-      "Eta Aquarids를 잘 보려면 Aquarius자리 위치를 향하여 April 22, 2020보면 됩니다.\n",
-      "Orionids를 잘 보려면 Orion자리 위치를 향하여 October 16, 2020보면 됩니다.\n",
-      "Perseids를 잘 보려면 Perseus자리 위치를 향하여 July 20, 2020보면 됩니다.\n",
-      "\n"
+      "관측 가능한 별자리를 찾았습니다.\n",
+      "\t도시:\tSeoul\n",
+      "\t별자리:\tLyra, Aquarius, Orion, Perseus\n",
+      "--------------------------------------------------------------------------------\n",
+      "별자리: Lyra       -> 유성우: Lyrids       (최적:2020-04-22)\n",
+      "별자리: Aquarius   -> 유성우: Eta Aquarids (최적:2020-04-22)\n",
+      "별자리: Orion      -> 유성우: Orionids     (최적:2020-10-16)\n",
+      "별자리: Perseus    -> 유성우: Perseids     (최적:2020-07-20)\n"
      ]
     }
    ],
