--- a/meteor-shower/OverTheMoon_유성우.ipynb
+++ b/meteor-shower/OverTheMoon_유성우.ipynb
@@ -3213,7 +3213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3240,7 +3240,7 @@
     "    \n",
     "    # 별자리 관측 가능 안내 메시지\n",
     "    messages.append(f'관측 가능한 별자리를 찾았습니다.\\n\\t도시:\\t{city}\\n\\t별자리:\\t{', '.join(visible_constellations)}')\n",
-    "    messages.append('-'*80)\n",
+    "    messages.append('-'*70)\n",
     "    \n",
     "    # 도시별 관찰 가능한 별자리 iterate\n",
     "    for constellation in visible_constellations:\n",
@@ -3262,13 +3262,14 @@
     "        messages.append(\n",
     "            f'별자리: {constellation:10} -> 유성우: {meteor_shower['name']:18} (최적:{darkest_day})'\n",
     "        )\n",
+    "    messages.append('='*70)\n",
     "\n",
     "    return '\\n'.join(messages)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -3286,7 +3287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -3296,9 +3297,10 @@
       "관측 가능한 별자리를 찾았습니다.\n",
       "\t도시:\tWellington\n",
       "\t별자리:\tAquarius, Orion\n",
-      "--------------------------------------------------------------------------------\n",
-      "별자리: Aquarius   -> 유성우: Eta Aquarids (최적:2020-04-22)\n",
-      "별자리: Orion      -> 유성우: Orionids     (최적:2020-10-16)\n"
+      "----------------------------------------------------------------------\n",
+      "별자리: Aquarius   -> 유성우: Eta Aquarids       (최적:2020-04-22)\n",
+      "별자리: Orion      -> 유성우: Orionids           (최적:2020-10-16)\n",
+      "======================================================================\n"
      ]
     }
    ],
@@ -3308,7 +3310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -3318,11 +3320,12 @@
       "관측 가능한 별자리를 찾았습니다.\n",
       "\t도시:\tSeoul\n",
       "\t별자리:\tLyra, Aquarius, Orion, Perseus\n",
-      "--------------------------------------------------------------------------------\n",
-      "별자리: Lyra       -> 유성우: Lyrids       (최적:2020-04-22)\n",
-      "별자리: Aquarius   -> 유성우: Eta Aquarids (최적:2020-04-22)\n",
-      "별자리: Orion      -> 유성우: Orionids     (최적:2020-10-16)\n",
-      "별자리: Perseus    -> 유성우: Perseids     (최적:2020-07-20)\n"
+      "----------------------------------------------------------------------\n",
+      "별자리: Lyra       -> 유성우: Lyrids             (최적:2020-04-22)\n",
+      "별자리: Aquarius   -> 유성우: Eta Aquarids       (최적:2020-04-22)\n",
+      "별자리: Orion      -> 유성우: Orionids           (최적:2020-10-16)\n",
+      "별자리: Perseus    -> 유성우: Perseids           (최적:2020-07-20)\n",
+      "======================================================================\n"
      ]
     }
    ],
