소제목 수정

--- a/advertising/advertising.ipynb
+++ b/advertising/advertising.ipynb
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 🔗 선형 회귀\n",
+    "### 🔗 선형 회귀; Linear Regression\n",
     "TV 광고량으로부터 Sales를 예측하는 선형 회귀입니다."
    ]
   },
@@ -296,18 +296,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((50, 1), (150, 1), (50,), (150,))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, random_state=42, test_size=0.75)"
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, random_state=42, test_size=0.75)\n",
+    "\n",
+    "x_train.shape, x_test.shape, y_train.shape, y_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -327,6 +340,13 @@
     "sns.scatterplot(x=x_test['TV'], y=y_test, label='test')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
