--- a/advertising/advertising.ipynb
+++ b/advertising/advertising.ipynb
@@ -254,7 +254,7 @@
     "X = df[['TV']]  \n",
     "y = df['Sales']\n",
     "\n",
-    "# x: 독립 변수, 입력 변수, Feature(자질)\n",
+    "# X: 독립 변수, 입력 변수, Feature(자질). X를 대문자로 쓰는게 관행이라는데, 저는 불호에요.\n",
     "# y: 종속 변수, 출력 변수"
    ]
   },
