--- a/advertising/advertising.ipynb
+++ b/advertising/advertising.ipynb
@@ -787,11 +787,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### ☑️ 테스트"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE\t: 5.10\n",
+      "RMSE\t: 2.26\n",
+      "MAE\t: 1.78\n",
+      "R2\t: 0.81\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, root_mean_squared_error, mean_absolute_error, r2_score\n",
+    "\n",
+    "pred = model.predict(X_test)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, pred)\n",
+    "rmse = root_mean_squared_error(y_test, pred)\n",
+    "mae = mean_absolute_error(y_test, pred)\n",
+    "r2 = r2_score(y_test, pred)\n",
+    "\n",
+    "print(\n",
+    "    f'MSE\\t: {mse:.2f}\\n'\n",
+    "    f'RMSE\\t: {rmse:.2f}\\n'\n",
+    "    f'MAE\\t: {mae:.2f}\\n'\n",
+    "    f'R2\\t: {r2:.2f}'\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
