회귀식 분석

--- a/advertising/advertising.ipynb
+++ b/advertising/advertising.ipynb
@@ -84,7 +84,8 @@
     "# .ipynb 커널에서는 plt가 항상 자동으로 표시됩니다. \n",
     "# 10번 줄은 수동으로 표시하는 함수라서 .py 파일 내에서는 필요할 수 있지만 여기서는 생략해도 됩니다.\n",
     "# 10번 줄을 없애면 8번 줄의 반환값이 추가로 표시되기 때문에 못생겨집니다.\n",
-    "# 이걸 없애고 싶다면 plt.show()를 다시 쓰거나, pass로 대체하면 됩니다."
+    "# 이걸 없애고 싶다면 plt.show()를 다시 쓰거나, pass로 대체하면 됩니다.\n",
+    "# 또는 8번줄 맨 뒤에 세미콜론을 붙여도 결과가 출력되는 것을 막을 수 있습니다."
    ]
   },
   {
@@ -998,6 +999,40 @@
     "    f'MAE\\t: {mae:.2f}\\n'\n",
     "    f'R2\\t: {r2:.2f}'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 📝 회귀식 분석"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "회귀계수\t: [0.05713156]\n",
+      "절편\t\t: 6.778254761487283\n",
+      "회귀식\t\t: y = 0.0571 * x_0 + 6.7783\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    f'회귀계수\\t: {model.coef_}\\n'\n",
+    "    f'절편\\t\\t: {model.intercept_}\\n'\n",
+    "    f'회귀식\\t\\t: y = ', end=''\n",
+    ")\n",
+    "\n",
+    "for i, coef in enumerate(model.coef_):\n",
+    "    print(f'{coef:.4f} * x_{i} + ', end='')\n",
+    "print(f'{model.intercept_:.4f}')"
    ]
   }
  ],
