--- a/advertising/advertising.ipynb
+++ b/advertising/advertising.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2520,7 +2520,7 @@
     "\n",
     "print(\n",
     "    f'Train R2: {train_r2_3}\\n'\n",
-    "    f'Test Rt\\t: {test_r2_3}'\n",
+    "    f'Test R2\\t: {test_r2_3}'\n",
     ")"
    ]
   },
@@ -2637,7 +2637,7 @@
     "\n",
     "print(\n",
     "    f'Train R2: {train_r2_4}\\n'\n",
-    "    f'Test Rt\\t: {test_r2_4}'\n",
+    "    f'Test R2\\t: {test_r2_4}'\n",
     ")"
    ]
   },
@@ -2683,7 +2683,7 @@
     "\n",
     "print(\n",
     "    f'Train R2: {train_r2_5}\\n'\n",
-    "    f'Test Rt\\t: {test_r2_5}'\n",
+    "    f'Test R2\\t: {test_r2_5}'\n",
     ")"
    ]
   }
