--- a/bike-regression/02_회귀_공공자전거 수요 예측_실습.ipynb
+++ b/bike-regression/02_회귀_공공자전거 수요 예측_실습.ipynb
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 225,
    "id": "24de95fa",
    "metadata": {},
    "outputs": [
@@ -1608,7 +1608,7 @@
        "((8164, 8), (2722, 8), (8164,), (2722,))"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 226,
    "id": "891ce9ec",
    "metadata": {},
    "outputs": [
@@ -1635,12 +1635,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train R2: 0.3413855078748024\n",
-      "Test R2\t: 0.31279503157859767\n",
-      "MSE\t: 22961.1013\n",
-      "RMSE\t: 151.5292\n",
-      "MAE\t: 111.3694\n",
-      "R2\t: 0.3128\n",
+      "Train R2: 0.3336952089401519\n",
+      "Test R2\t: 0.3353440958588434\n",
+      "\n",
+      "MSE\t: 22023.0710\n",
+      "RMSE\t: 148.4017\n",
+      "MAE\t: 108.9934\n",
       "\n"
      ]
     }
@@ -1658,7 +1658,7 @@
     "\n",
     "print(\n",
     "    f'Train R2: {train_r2_5}\\n'\n",
-    "    f'Test R2\\t: {test_r2_5}'\n",
+    "    f'Test R2\\t: {test_r2_5}\\n'\n",
     ")\n",
     "\n",
     "# 테스트데이터로 예측\n",
@@ -1674,7 +1674,6 @@
     "    f'MSE\\t: {mse:.4f}\\n'\n",
     "    f'RMSE\\t: {rmse:.4f}\\n'\n",
     "    f'MAE\\t: {mae:.4f}\\n'\n",
-    "    f'R2\\t: {r2:.4f}\\n'\n",
     ")\n"
    ]
   },
@@ -1688,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 227,
    "id": "6babe856",
    "metadata": {},
    "outputs": [
@@ -1905,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 228,
    "id": "a4374766",
    "metadata": {},
    "outputs": [
