--- a/bike-regression/02_회귀_공공자전거 수요 예측_실습.ipynb
+++ b/bike-regression/02_회귀_공공자전거 수요 예측_실습.ipynb
@@ -1671,7 +1671,7 @@
     "r2 = r2_score(y_test, pred)\n",
     "\n",
     "print(\n",
-    "    f'MSE\\t: {mse:.4f}\\n'\n",
+    "    f'MSE\\t: {mse:.4f}\\n'ㄴ\n",
     "    f'RMSE\\t: {rmse:.4f}\\n'\n",
     "    f'MAE\\t: {mae:.4f}\\n'\n",
     ")\n"
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 233,
    "id": "6babe856",
    "metadata": {},
    "outputs": [
@@ -1712,10 +1712,181 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>season</th>\n",
        "      <th>holiday</th>\n",
+       "      <th>workingday</th>\n",
+       "      <th>weather</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>atemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>casual</th>\n",
+       "      <th>registered</th>\n",
+       "      <th>count</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>dayofweek</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2011-01-01 00:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2011-01-01 01:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.02</td>\n",
+       "      <td>13.635</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>32</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2011-01-01 02:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.02</td>\n",
+       "      <td>13.635</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>27</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011-01-01 03:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2011-01-01 04:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             datetime  season  holiday  workingday  weather  temp   atemp  \\\n",
+       "0 2011-01-01 00:00:00       1        0           0        1  9.84  14.395   \n",
+       "1 2011-01-01 01:00:00       1        0           0        1  9.02  13.635   \n",
+       "2 2011-01-01 02:00:00       1        0           0        1  9.02  13.635   \n",
+       "3 2011-01-01 03:00:00       1        0           0        1  9.84  14.395   \n",
+       "4 2011-01-01 04:00:00       1        0           0        1  9.84  14.395   \n",
+       "\n",
+       "   humidity  windspeed  casual  registered  count  year  month  day  hour  \\\n",
+       "0        81        0.0       3          13     16  2011      1    1     0   \n",
+       "1        80        0.0       8          32     40  2011      1    1     1   \n",
+       "2        80        0.0       5          27     32  2011      1    1     2   \n",
+       "3        75        0.0       3          10     13  2011      1    1     3   \n",
+       "4        75        0.0       0           1      1  2011      1    1     4   \n",
+       "\n",
+       "   dayofweek  \n",
+       "0          5  \n",
+       "1          5  \n",
+       "2          5  \n",
+       "3          5  \n",
+       "4          5  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
        "      <th>temp</th>\n",
        "      <th>humidity</th>\n",
        "      <th>windspeed</th>\n",
+       "      <th>holiday</th>\n",
        "      <th>year_2011</th>\n",
        "      <th>year_2012</th>\n",
        "      <th>month_1</th>\n",
@@ -1738,10 +1909,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>9.84</td>\n",
        "      <td>81</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -1762,10 +1933,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
        "      <td>9.02</td>\n",
        "      <td>80</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -1786,10 +1957,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
        "      <td>9.02</td>\n",
        "      <td>80</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -1810,10 +1981,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0</td>\n",
        "      <td>9.84</td>\n",
        "      <td>75</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -1834,10 +2005,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
        "      <td>9.84</td>\n",
        "      <td>75</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -1858,16 +2029,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 46 columns</p>\n",
+       "<p>5 rows × 65 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   holiday  temp  humidity  windspeed  year_2011  year_2012  month_1  month_2  \\\n",
-       "0        0  9.84        81        0.0       True      False     True    False   \n",
-       "1        0  9.02        80        0.0       True      False     True    False   \n",
-       "2        0  9.02        80        0.0       True      False     True    False   \n",
-       "3        0  9.84        75        0.0       True      False     True    False   \n",
-       "4        0  9.84        75        0.0       True      False     True    False   \n",
+       "   temp  humidity  windspeed  holiday  year_2011  year_2012  month_1  month_2  \\\n",
+       "0  9.84        81        0.0        0       True      False     True    False   \n",
+       "1  9.02        80        0.0        0       True      False     True    False   \n",
+       "2  9.02        80        0.0        0       True      False     True    False   \n",
+       "3  9.84        75        0.0        0       True      False     True    False   \n",
+       "4  9.84        75        0.0        0       True      False     True    False   \n",
        "\n",
        "   month_3  month_4  ...  hour_18  hour_19  hour_20  hour_21  hour_22  \\\n",
        "0    False    False  ...    False    False    False    False    False   \n",
@@ -1883,7 +2054,7 @@
        "3    False       True      False      False      False  \n",
        "4    False       True      False      False      False  \n",
        "\n",
-       "[5 rows x 46 columns]"
+       "[5 rows x 65 columns]"
       ]
      },
      "metadata": {},
@@ -1893,9 +2064,11 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "display(df.head())\n",
+    "\n",
     "# 범주형(Categorical) 변수 원핫인코딩\n",
-    "X = df[['holiday', 'weather', 'temp', 'humidity', 'windspeed', 'year', 'month', 'hour']]\n",
-    "X_one_hot = pd.get_dummies(X, columns=['year', 'month', 'hour', 'weather'])\n",
+    "X = df[['weather', 'temp', 'humidity', 'windspeed', 'year', 'month', 'day', 'hour', 'holiday',]]\n",
+    "X_one_hot = pd.get_dummies(X, columns=['year', 'month', 'day', 'hour', 'weather'])\n",
     "display(X_one_hot.head())\n",
     "\n",
     "# 훈련세트/테스트세트 분할\n",
@@ -1904,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 234,
    "id": "a4374766",
    "metadata": {},
    "outputs": [
@@ -1912,12 +2085,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train R2: 0.6935299283813257\n",
-      "Test R2\t: 0.6910146138469289\n",
+      "Train R2: 0.6943323543007236\n",
+      "Test R2\t: 0.6909836941218284\n",
       "\n",
-      "MSE\t: 10139.0589\n",
-      "RMSE\t: 100.6929\n",
-      "MAE\t: 74.5359\n",
+      "MSE\t: 10140.0735\n",
+      "RMSE\t: 100.6979\n",
+      "MAE\t: 74.5516\n",
       "\n"
      ]
     }
