교차검증 - 모델별 성능 비교

--- a/bike-regression/02_회귀_공공자전거 수요 예측_실습.ipynb
+++ b/bike-regression/02_회귀_공공자전거 수요 예측_실습.ipynb
@@ -1593,22 +1593,22 @@
     "id": "m7QQlWS59CzF"
    },
    "source": [
-    "# 🔗 LinearRegression"
+    "## 🔗 선형 회귀"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 275,
    "id": "24de95fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((8164, 8), (2722, 8), (8164,), (2722,))"
+       "((8164, 10), (2722, 10), (8164,), (2722,))"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1617,7 +1617,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# 변수선택\n",
-    "X = df[['season', 'holiday', 'workingday', 'weather', 'temp', 'humidity', 'windspeed', 'hour']]\n",
+    "X = df[['weather', 'temp', 'humidity', 'windspeed', 'year', 'month', 'day', 'hour', 'dayofweek', 'holiday']]\n",
     "y = df['count']\n",
     "\n",
     "# 훈련세트/테스트세트 분할\n",
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 277,
    "id": "891ce9ec",
    "metadata": {},
    "outputs": [
@@ -1635,12 +1635,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train R2: 0.3336952089401519\n",
-      "Test R2\t: 0.3353440958588434\n",
+      "Train R2: 0.3880558936598175\n",
+      "Test R2\t: 0.3867347475708971\n",
       "\n",
-      "MSE\t: 22023.0710\n",
-      "RMSE\t: 148.4017\n",
-      "MAE\t: 108.9934\n",
+      "MSE\t: 20017.9719\n",
+      "RMSE\t: 141.4849\n",
+      "MAE\t: 104.5917\n",
       "\n"
      ]
     }
@@ -1671,7 +1671,7 @@
     "r2 = r2_score(y_test, pred)\n",
     "\n",
     "print(\n",
-    "    f'MSE\\t: {mse:.4f}\\n'ㄴ\n",
+    "    f'MSE\\t: {mse:.4f}\\n'\n",
     "    f'RMSE\\t: {rmse:.4f}\\n'\n",
     "    f'MAE\\t: {mae:.4f}\\n'\n",
     ")\n"
@@ -1682,12 +1682,12 @@
    "id": "04f0cc6b",
    "metadata": {},
    "source": [
-    "## ⛓️‍💥 원-핫 인코딩"
+    "### ⛓️‍💥 원-핫 인코딩"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 278,
    "id": "6babe856",
    "metadata": {},
    "outputs": [
@@ -1894,16 +1894,16 @@
        "      <th>month_3</th>\n",
        "      <th>month_4</th>\n",
        "      <th>...</th>\n",
-       "      <th>hour_18</th>\n",
-       "      <th>hour_19</th>\n",
-       "      <th>hour_20</th>\n",
-       "      <th>hour_21</th>\n",
-       "      <th>hour_22</th>\n",
-       "      <th>hour_23</th>\n",
-       "      <th>weather_1</th>\n",
        "      <th>weather_2</th>\n",
        "      <th>weather_3</th>\n",
        "      <th>weather_4</th>\n",
+       "      <th>dayofweek_0</th>\n",
+       "      <th>dayofweek_1</th>\n",
+       "      <th>dayofweek_2</th>\n",
+       "      <th>dayofweek_3</th>\n",
+       "      <th>dayofweek_4</th>\n",
+       "      <th>dayofweek_5</th>\n",
+       "      <th>dayofweek_6</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1926,9 +1926,9 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1950,9 +1950,9 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1974,9 +1974,9 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1998,9 +1998,9 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2022,14 +2022,14 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 65 columns</p>\n",
+       "<p>5 rows × 72 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2040,21 +2040,28 @@
        "3  9.84        75        0.0        0       True      False     True    False   \n",
        "4  9.84        75        0.0        0       True      False     True    False   \n",
        "\n",
-       "   month_3  month_4  ...  hour_18  hour_19  hour_20  hour_21  hour_22  \\\n",
-       "0    False    False  ...    False    False    False    False    False   \n",
-       "1    False    False  ...    False    False    False    False    False   \n",
-       "2    False    False  ...    False    False    False    False    False   \n",
-       "3    False    False  ...    False    False    False    False    False   \n",
-       "4    False    False  ...    False    False    False    False    False   \n",
+       "   month_3  month_4  ...  weather_2  weather_3  weather_4  dayofweek_0  \\\n",
+       "0    False    False  ...      False      False      False        False   \n",
+       "1    False    False  ...      False      False      False        False   \n",
+       "2    False    False  ...      False      False      False        False   \n",
+       "3    False    False  ...      False      False      False        False   \n",
+       "4    False    False  ...      False      False      False        False   \n",
        "\n",
-       "   hour_23  weather_1  weather_2  weather_3  weather_4  \n",
-       "0    False       True      False      False      False  \n",
-       "1    False       True      False      False      False  \n",
-       "2    False       True      False      False      False  \n",
-       "3    False       True      False      False      False  \n",
-       "4    False       True      False      False      False  \n",
+       "   dayofweek_1  dayofweek_2  dayofweek_3  dayofweek_4  dayofweek_5  \\\n",
+       "0        False        False        False        False         True   \n",
+       "1        False        False        False        False         True   \n",
+       "2        False        False        False        False         True   \n",
+       "3        False        False        False        False         True   \n",
+       "4        False        False        False        False         True   \n",
        "\n",
-       "[5 rows x 65 columns]"
+       "   dayofweek_6  \n",
+       "0        False  \n",
+       "1        False  \n",
+       "2        False  \n",
+       "3        False  \n",
+       "4        False  \n",
+       "\n",
+       "[5 rows x 72 columns]"
       ]
      },
      "metadata": {},
@@ -2067,8 +2074,8 @@
     "display(df.head())\n",
     "\n",
     "# 범주형(Categorical) 변수 원핫인코딩\n",
-    "X = df[['weather', 'temp', 'humidity', 'windspeed', 'year', 'month', 'day', 'hour', 'holiday',]]\n",
-    "X_one_hot = pd.get_dummies(X, columns=['year', 'month', 'day', 'hour', 'weather'])\n",
+    "X = df[['weather', 'temp', 'humidity', 'windspeed', 'year', 'month', 'day', 'hour', 'dayofweek', 'holiday']]\n",
+    "X_one_hot = pd.get_dummies(X, columns=['year', 'month', 'day', 'hour', 'weather', 'dayofweek'])\n",
     "display(X_one_hot.head())\n",
     "\n",
     "y = df['count']\n",
@@ -2079,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 279,
    "id": "a4374766",
    "metadata": {},
    "outputs": [
@@ -2087,12 +2094,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train R2: 0.6943323543007236\n",
-      "Test R2\t: 0.6909836941218284\n",
+      "Train R2: 0.6955856570624472\n",
+      "Test R2\t: 0.6916282739821307\n",
       "\n",
-      "MSE\t: 10140.0735\n",
-      "RMSE\t: 100.6979\n",
-      "MAE\t: 74.5516\n",
+      "MSE\t: 10118.9222\n",
+      "RMSE\t: 100.5929\n",
+      "MAE\t: 74.5228\n",
       "\n"
      ]
     }
@@ -2130,15 +2137,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0affa0b",
+   "id": "8405d49f",
    "metadata": {},
    "source": [
-    "## ➰ 종속변수 로그변환"
+    "### ➰ 종속변수 로그 변환"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 280,
    "id": "a93a63e0",
    "metadata": {},
    "outputs": [
@@ -2345,16 +2352,16 @@
        "      <th>month_3</th>\n",
        "      <th>month_4</th>\n",
        "      <th>...</th>\n",
-       "      <th>hour_18</th>\n",
-       "      <th>hour_19</th>\n",
-       "      <th>hour_20</th>\n",
-       "      <th>hour_21</th>\n",
-       "      <th>hour_22</th>\n",
-       "      <th>hour_23</th>\n",
-       "      <th>weather_1</th>\n",
        "      <th>weather_2</th>\n",
        "      <th>weather_3</th>\n",
        "      <th>weather_4</th>\n",
+       "      <th>dayofweek_0</th>\n",
+       "      <th>dayofweek_1</th>\n",
+       "      <th>dayofweek_2</th>\n",
+       "      <th>dayofweek_3</th>\n",
+       "      <th>dayofweek_4</th>\n",
+       "      <th>dayofweek_5</th>\n",
+       "      <th>dayofweek_6</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2377,9 +2384,9 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2401,9 +2408,9 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2425,9 +2432,9 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2449,9 +2456,9 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2473,14 +2480,14 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 65 columns</p>\n",
+       "<p>5 rows × 72 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2491,21 +2498,28 @@
        "3  9.84        75        0.0        0       True      False     True    False   \n",
        "4  9.84        75        0.0        0       True      False     True    False   \n",
        "\n",
-       "   month_3  month_4  ...  hour_18  hour_19  hour_20  hour_21  hour_22  \\\n",
-       "0    False    False  ...    False    False    False    False    False   \n",
-       "1    False    False  ...    False    False    False    False    False   \n",
-       "2    False    False  ...    False    False    False    False    False   \n",
-       "3    False    False  ...    False    False    False    False    False   \n",
-       "4    False    False  ...    False    False    False    False    False   \n",
+       "   month_3  month_4  ...  weather_2  weather_3  weather_4  dayofweek_0  \\\n",
+       "0    False    False  ...      False      False      False        False   \n",
+       "1    False    False  ...      False      False      False        False   \n",
+       "2    False    False  ...      False      False      False        False   \n",
+       "3    False    False  ...      False      False      False        False   \n",
+       "4    False    False  ...      False      False      False        False   \n",
        "\n",
-       "   hour_23  weather_1  weather_2  weather_3  weather_4  \n",
-       "0    False       True      False      False      False  \n",
-       "1    False       True      False      False      False  \n",
-       "2    False       True      False      False      False  \n",
-       "3    False       True      False      False      False  \n",
-       "4    False       True      False      False      False  \n",
+       "   dayofweek_1  dayofweek_2  dayofweek_3  dayofweek_4  dayofweek_5  \\\n",
+       "0        False        False        False        False         True   \n",
+       "1        False        False        False        False         True   \n",
+       "2        False        False        False        False         True   \n",
+       "3        False        False        False        False         True   \n",
+       "4        False        False        False        False         True   \n",
        "\n",
-       "[5 rows x 65 columns]"
+       "   dayofweek_6  \n",
+       "0        False  \n",
+       "1        False  \n",
+       "2        False  \n",
+       "3        False  \n",
+       "4        False  \n",
+       "\n",
+       "[5 rows x 72 columns]"
       ]
      },
      "metadata": {},
@@ -2528,8 +2542,8 @@
     "display(df.head())\n",
     "\n",
     "# 범주형(Categorical) 변수 원핫인코딩\n",
-    "X = df[['weather', 'temp', 'humidity', 'windspeed', 'year', 'month', 'day', 'hour', 'holiday',]]\n",
-    "X_one_hot = pd.get_dummies(X, columns=['year', 'month', 'day', 'hour', 'weather'])\n",
+    "X = df[['weather', 'temp', 'humidity', 'windspeed', 'year', 'month', 'day', 'hour', 'dayofweek', 'holiday']]\n",
+    "X_one_hot = pd.get_dummies(X, columns=['year', 'month', 'day', 'hour', 'weather', 'dayofweek'])\n",
     "display(X_one_hot.head())\n",
     "\n",
     "y = df['count']\n",
@@ -2545,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 281,
    "id": "55f242d1",
    "metadata": {},
    "outputs": [
@@ -2553,12 +2567,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train R2: 0.8315028400358174\n",
-      "Test R2\t: 0.8323756568780215\n",
+      "Train R2: 0.8336515920989436\n",
+      "Test R2\t: 0.8345185795094765\n",
       "\n",
-      "MSE\t: 0.3353\n",
-      "RMSE\t: 0.5791\n",
-      "MAE\t: 0.4345\n",
+      "MSE\t: 9237.3411\n",
+      "RMSE\t: 96.1111\n",
+      "MAE\t: 62.5966\n",
       "\n"
      ]
     }
@@ -2583,8 +2597,8 @@
     "pred = model.predict(X_test)\n",
     "\n",
     "# 로그 역변환\n",
-    "# pred = np.expm1(pred)\n",
-    "# y_test = np.expm1(y_test)\n",
+    "pred = np.expm1(pred)\n",
+    "y_test = np.expm1(y_test)\n",
     "\n",
     "# 모델 성능 평가\n",
     "mse = mean_squared_error(y_test, pred)\n",
@@ -2603,13 +2617,20 @@
    "id": "0ee96014",
    "metadata": {},
    "source": [
-    "## ⚖️ 교차 검증\n",
-    "여러 방법으로 전처리된 데이터들을 동일한 모델에 대해 교차검증한 다음, 점수를 비교합니다."
+    "## ⚖️ 교차 검증"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d142a595",
+   "metadata": {},
+   "source": [
+    "### 📑 데이터 전처리 비교"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 282,
    "id": "0156c6d7",
    "metadata": {},
    "outputs": [
@@ -2617,10 +2638,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "기본 데이터\t\t: 0.38673095550735304\n",
-      "원 핫 인코딩\t\t: 0.6894164279661162\n",
-      "원 핫 인코딩 로그 변환\t: 0.8293845225438095\n",
-      "로그 변환\t\t: 0.48334509319595725\n",
+      "기본 데이터\t\t: 0.3866874643852777\n",
+      "원 핫 인코딩\t\t: 0.6901641694213633\n",
+      "원 핫 인코딩 로그 변환\t: 0.8313835549625568\n",
+      "로그 변환\t\t: 0.48445392645683827\n",
       "\n"
      ]
     }
@@ -2649,16 +2670,52 @@
    "id": "afc13a79",
    "metadata": {},
    "source": [
-    "# 다른 모델과 비교"
+    "### 🧠 모델별 성능 비교"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 283,
    "id": "ebd1e7ca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression\t: 0.6901641694213633\n",
+      "KNeighborsRegrssor\t: 0.2745544745422014\n",
+      "DicisionTreeRegressor\t: 0.8135364578968073\n",
+      "RandomForestRegressor\t: 0.9035621331041845\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import cross_val_score, KFold\n",
+    "\n",
+    "model1 = LinearRegression()\n",
+    "model2 = KNeighborsRegressor()\n",
+    "model3 = DecisionTreeRegressor()\n",
+    "model4 = RandomForestRegressor()\n",
+    "\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "model1_score = cross_val_score(model1, X_one_hot, y, scoring='r2', cv=kf).mean()\n",
+    "model2_score = cross_val_score(model2, X_one_hot, y, scoring='r2', cv=kf).mean()\n",
+    "model3_score = cross_val_score(model3, X_one_hot, y, scoring='r2', cv=kf).mean()\n",
+    "model4_score = cross_val_score(model4, X_one_hot, y, scoring='r2', cv=kf).mean()\n",
+    "\n",
+    "print(\n",
+    "    f'LinearRegression\\t: {model1_score}\\n'\n",
+    "    f'KNeighborsRegrssor\\t: {model2_score}\\n'\n",
+    "    f'DicisionTreeRegressor\\t: {model3_score}\\n'\n",
+    "    f'RandomForestRegressor\\t: {model4_score}\\n'\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
