--- a/bike-regression/02_회귀_공공자전거 수요 예측_실습.ipynb
+++ b/bike-regression/02_회귀_공공자전거 수요 예측_실습.ipynb
@@ -2675,7 +2675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 289,
    "id": "ebd1e7ca",
    "metadata": {},
    "outputs": [
@@ -2683,11 +2683,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinearRegression\t: 0.6901641694213633\n",
-      "KNeighborsRegrssor\t: 0.2745544745422014\n",
-      "DicisionTreeRegressor\t: 0.8135364578968073\n",
-      "RandomForestRegressor\t: 0.9035621331041845\n",
-      "\n"
+      "=================================================\n",
+      "| 모델\t\t\t| R2 Score\t\t|\n",
+      "-------------------------------------------------\n",
+      "| LinearRegression\t| 0.6901641694213633\t|\n",
+      "| KNeighborsRegrssor\t| 0.2745544745422014\t|\n",
+      "| DicisionTreeRegressor\t| 0.8145219324317363\t|\n",
+      "| RandomForestRegressor\t| 0.9042882580572874\t|\n",
+      "=================================================\n"
      ]
     }
    ],
@@ -2697,6 +2700,10 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import cross_val_score, KFold\n",
     "\n",
+    "print('='*49)\n",
+    "print('| 모델\\t\\t\\t| R2 Score\\t\\t|')\n",
+    "print('-'*49)\n",
+    "\n",
     "model1 = LinearRegression()\n",
     "model2 = KNeighborsRegressor()\n",
     "model3 = DecisionTreeRegressor()\n",
@@ -2705,16 +2712,18 @@
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
     "model1_score = cross_val_score(model1, X_one_hot, y, scoring='r2', cv=kf).mean()\n",
-    "model2_score = cross_val_score(model2, X_one_hot, y, scoring='r2', cv=kf).mean()\n",
-    "model3_score = cross_val_score(model3, X_one_hot, y, scoring='r2', cv=kf).mean()\n",
-    "model4_score = cross_val_score(model4, X_one_hot, y, scoring='r2', cv=kf).mean()\n",
+    "print( f'| LinearRegression\\t| {model1_score}\\t|')\n",
     "\n",
-    "print(\n",
-    "    f'LinearRegression\\t: {model1_score}\\n'\n",
-    "    f'KNeighborsRegrssor\\t: {model2_score}\\n'\n",
-    "    f'DicisionTreeRegressor\\t: {model3_score}\\n'\n",
-    "    f'RandomForestRegressor\\t: {model4_score}\\n'\n",
-    ")"
+    "model2_score = cross_val_score(model2, X_one_hot, y, scoring='r2', cv=kf).mean()\n",
+    "print(f'| KNeighborsRegrssor\\t| {model2_score}\\t|')\n",
+    "\n",
+    "model3_score = cross_val_score(model3, X_one_hot, y, scoring='r2', cv=kf).mean()\n",
+    "print(f'| DicisionTreeRegressor\\t| {model3_score}\\t|')\n",
+    "\n",
+    "model4_score = cross_val_score(model4, X_one_hot, y, scoring='r2', cv=kf).mean()\n",
+    "print(f'| RandomForestRegressor\\t| {model4_score}\\t|')\n",
+    "\n",
+    "print('='*49)"
    ]
   }
  ],
