--- a/rocket/12_로켓발사_실습.ipynb
+++ b/rocket/12_로켓발사_실습.ipynb
@@ -1185,14 +1185,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 모델링"
+    "## ⚙️ 모델링"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 훈련세트/테스트세트 분할\n"
+    "### ✂️ 훈련세트/테스트세트 분할\n"
    ]
   },
   {
@@ -1222,7 +1222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 모델 생성 및 훈련"
+    "### 🧠 모델 생성 및 훈련"
    ]
   },
   {
@@ -1670,7 +1670,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 분류 모델의 평가지표"
+    "### 📊 평가지표; Metrics"
    ]
   },
   {
