독립변수 재선택

--- a/rocket/12_로켓발사_실습.ipynb
+++ b/rocket/12_로켓발사_실습.ipynb
@@ -1926,7 +1926,7 @@
     "print(f'트리 깊이: {model.tree_.max_depth}')\n",
     "# 시각화\n",
     "plt.figure(figsize=(15,4))\n",
-    "plot_tree(model, feature_names=X.columns, filled=True)\n",
+    "plot_tree(model, feature_names=X.columns)\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
