--- a/clustering/20_군집화_실습.ipynb
+++ b/clustering/20_군집화_실습.ipynb
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📏 K-Means 군집화 수행"
+    "## 📏 K-Means 군집화"
    ]
   },
   {
