--- a/clustering/20_군집화_실습.ipynb
+++ b/clustering/20_군집화_실습.ipynb
@@ -722,14 +722,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ↔ K-Means 군집화와 비교"
+    "### ❓ K-Means 군집화와 비교"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 📏 K-Means 군집화 수행"
+    "#### 📏 K-Means 군집화"
    ]
   },
   {
@@ -848,7 +848,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 🧿 DBSCAN 수행"
+    "#### 🧿 DBSCAN"
    ]
   },
   {
